--- a/CS601Project/webContent/CSS/innerLayout.css
+++ b/CS601Project/webContent/CSS/innerLayout.css
@@ -1,6 +1,6 @@
 .home-title{
 	display: block;
-    width: 350px;
+    width: 340px;
     margin: 50px auto 50px auto;
     font-size: 40px;
 }
@@ -18,6 +18,9 @@
 }
 .btn-view-business
 {
+	float: right;
+}
+.btn-add-reviews{
 	float: right;
 }
 #map {
